--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <h3>Код</h3>
           <button id=clear>Очистить</button>
         </div>
-        <div id="input" contenteditable></div>
+        <div id="input" contenteditable spellcheck="false"></div>
       </div>
 
 
@@ -27,7 +27,7 @@
 Звенья = Звено";"...Звено
 Звено = "Ввод текста" Опер";"...Опер
 Опер = Метка...Метка ":" Перем "=" Прав. ч
-Прав.ч = </-/> Блок Зн1...Блок
+Прав.ч = < / - / > Блок Зн1...Блок
 Зн1 = "+"!"-"
 Блок = Часть Зн2...Часть
 Зн2 = "*"!"/"
